--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/7220c352f8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
@@ -9,38 +10,40 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-default">
-                <div class="container col-xs-8 col-xs-offset-2">
-                    <div class="container-fluid">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
+                    <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand text-uppercase" href="#">Start Bootstrap </a>
-                        </div>
+                    </div>
 
-                        <ul class="nav navbar-nav navbar-right hidden-xs">
+                    <ul class="nav navbar-nav navbar-right hidden-xs">
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Contact</a></li>
-                        </ul>
-                    </div><!-- /.container-fluid -->
+                    </ul>
                  </div>
             </nav>
         </header>
         <main>
-            <div class="jumbotron text-center">
-                <div class="col-xs-12">
-                    <img src="img/avatar.svg" class="col-xs-12 col-sm-2 col-sm-offset-5" alt="">
+            <section class="jumbotron text-center">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <img src="img/avatar.svg" class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4" alt="Avatar">
+                        </div>
+                        <h1 class="text-uppercase">Start Bootstrap</h1>
+                        <div  class="star"><i class="fas fa-star"></i></div>
+                        <p>Graphic Artist - Web Designer - Illustrator</p>
+                    </div>
                 </div>
-                <h1 class="text-uppercase">Start Bootstrap</h1>
-                <span  id="star"><i class="fas fa-star"></i></span>
-                <p>Graphic Artist - Web Designer - Illustrator</p>
-            </div>
+            </section>
         </main>
     </body>
 </html>
