Added Portfolio section

--- a/index.html
+++ b/index.html
@@ -39,8 +39,70 @@
                             <img src="img/avatar.svg" class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-4" alt="Avatar">
                         </div>
                         <h1 class="text-uppercase">Start Bootstrap</h1>
-                        <div  class="star"><i class="fas fa-star"></i></div>
+                        <div>
+                            <div  class="star"><i class="fas fa-star"></i></div>
+                        </div>
                         <p>Graphic Artist - Web Designer - Illustrator</p>
+                    </div>
+                </div>
+            </section>
+            <section id="portfolio">
+                <div class="container">
+                    <div class="row text-center">
+                        <h2>Portfolio</h2>
+                        <div>
+                            <div  class="star2"><i class="fas fa-star"></i></div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <div class="logo-wrapper">
+                                <img src="img/cabin.png" alt="">
+                                <div class="portfolio-overlay">
+                                        <i class="fas fa-plus"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="logo-section" class="clearfix">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="logo-wrapper">
+                                    <img src="img/cake.png" alt="">
+                                    <div class="portfolio-overlay">
+                                            <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="logo-wrapper">
+                                    <img src="img/circus.png" alt="">
+                                    <div class="portfolio-overlay">
+                                            <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="logo-wrapper">
+                                    <img src="img/game.png" alt="">
+                                    <div class="portfolio-overlay">
+                                            <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="logo-wrapper">
+                                    <img src="img/safe.png" alt="">
+                                    <div class="portfolio-overlay">
+                                            <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-4">
+                                <div class="logo-wrapper">
+                                    <img src="img/submarine.png" alt="">
+                                    <div class="portfolio-overlay">
+                                            <i class="fas fa-plus"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
