--- a/index.html
+++ b/index.html
@@ -106,6 +106,25 @@
                     </div>
                 </div>
             </section>
+            <section id="about">
+                <div class="container">
+                    <div class="row text-center">
+                        <h3>About</h3>
+                        <div>
+                            <div  class="star"><i class="fas fa-star"></i></div>
+                        </div>
+                        <div class="text-left col-xs-12 col-md-4 col-md-offset-2">
+                            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                        </div>
+                        <div class="text-left col-xs-12 col-md-4">
+                            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+                        </div>
+                        <div class="col-xs-12 text-center">
+                            <button class="btn btn-default" type="submit"><i class="fas fa-download"></i> Free Download!</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
