--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="row text-center">
                         <h3>About</h3>
                         <div>
-                            <div  class="star"><i class="fas fa-star"></i></div>
+                            <div class="star"><i class="fas fa-star"></i></div>
                         </div>
                         <div class="text-left col-xs-12 col-md-4 col-md-offset-2">
                             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
@@ -122,6 +122,35 @@
                         <div class="col-xs-12 text-center">
                             <button class="btn btn-default" type="submit"><i class="fas fa-download"></i> Free Download!</button>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="contactme">
+                <div class="container">
+                    <div class="row text-center">
+                        <h4>Contact Me</h4>
+                        <div>
+                            <div class="star2"><i class="fas fa-star"></i></div>
+                        </div>
+                        <form class="text-left">
+                            <div class="form-group">
+                                <label for="InputName">Name</label>
+                                <input type="email" class="form-control" id="InputName" placeholder="Enter your Name">
+                            </div>
+                            <div class="form-group">
+                                <label for="InputEmail">Email Adress</label>
+                                <input type="email" class="form-control" id="InputEmail" placeholder="Enter your E-mail">
+                            </div>
+                            <div class="form-group">
+                                <label for="InputPhoneNumber">Phone Number</label>
+                                <input type="email" class="form-control" id="InputPhoneNumber" placeholder="Enter your Phone Number">
+                            </div>
+                            <div class="form-group">
+                                <label for="InputMessage">Message</label>
+                                <input type="email" class="form-control" id="InputMessage" placeholder="Enter a Message">
+                            </div>
+                            <button type="submit" class="btn btn-default">Send</button>
+                        </form>
                     </div>
                 </div>
             </section>
