--- a/index.html
+++ b/index.html
@@ -155,5 +155,35 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="container">
+                <div class="row text-center">
+                    <div class="clearfix">
+                        <div class="col-xs-12 col-md-4">
+                            <p class="footer-title">Location</p>
+                            <p>2215 John Daniel Drive</p>
+                            <p>Clark, MO 65243</p>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <p class="footer-title">Around the Web</p>
+                            <p>
+                                <a class="btn btn-default" href="#" role="button"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-default" href="#" role="button"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-default" href="#" role="button"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-default" href="#" role="button"><i class="fas fa-basketball-ball"></i></a>
+                            </p>
+                        </div>
+                        <div class="col-xs-12 col-md-4">
+                            <p class="footer-title">About Freelancer</p>
+                            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div id="copyright" class="text-center">
+                <p>Copyright &copy; Your Website 2019</p>
+            </div>
+        </footer>
     </body>
 </html>
